# ocerebro

./: .gitignore  .npmignore  LICENSE  MANIFEST.in  README.md  diff_report.md  hooks.yaml  ocerebro-0.4.11.tgz  package-lock.json  package.json  pyproject.toml
.claude/: settings.local.json
.claude/commands/: cerebro-dashboard.md  cerebro-diff.md  cerebro-dream.md  cerebro-gc.md  cerebro-memory.md  cerebro-remember.md  cerebro-search.md  cerebro-status.md
cerebro/: __init__.py  __main__.py  cerebro_setup.py  config.yaml
cerebro/index/: embeddings.db  entities.db  metadata.db
docs/: HOOKS_GUIDE.md
docs/superpowers/plans/: 2026-03-31-cerebro-implementacao.md
docs/superpowers/specs/: 2026-03-31-cerebro-design.md
hooks/: cost_hook.py  coverage_hook.py  error_hook.py  expensive_hook.py  global_logger.py
src/: __init__.py
src/cli/: __init__.py  dream.py  main.py
src/consolidation/: __init__.py  dream.py  extractor.py  promoter.py  scorer.py
src/core/: __init__.py  event_schema.py  jsonl_storage.py  paths.py
src/dashboard/: api.py  server.py  standalone_server.py
src/dashboard/static/: index.html
src/diff/: memory_diff.py
src/forgetting/: gc.py  guard_rails.py
src/hooks/: __init__.py  core_captures.py  custom_loader.py
src/index/: __init__.py  embeddings_db.py  entities_db.py  metadata_db.py  queries.py
src/mcp/: __init__.py  server.py
src/memdir/: __init__.py
src/official/: __init__.py  markdown_storage.py  templates.py
src/working/: __init__.py  memory_view.py  yaml_storage.py
tests/: __init__.py  conftest.py  test_checkpoints.py  test_cli.py  test_core_captures.py  test_dream.py  test_event_schema.py  test_extractor.py  test_gc.py  test_guard_rails.py  test_hooks.py  test_hooks_integration.py  test_index.py  test_jsonl_storage.py  test_markdown_storage.py  test_mcp.py  test_memory_diff.py  test_memory_view.py  test_metadata_db.py  test_paths.py  test_promoter.py  test_remember.py  test_scanner.py  test_scorer.py  test_scorer_integration.py  test_session_manager.py  test_yaml_storage.py
