[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cerebro"
version = "0.1.0"
description = "Sistema de Memória para Agentes de Código"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
cerebro = "src.cli.main:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"