[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cerebro-memory"
version = "0.1.0"
description = "Cerebro - Sistema de Memória para Agentes de Código"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "OARANHA", email = "seu-email@example.com"}
]
keywords = [
    "claude",
    "claude-code",
    "memory",
    "ai",
    "agent",
    "mcp",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
dev = [
    "cerebro-memory[test]",
    "black>=23.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/OARANHA/cerebro"
Repository = "https://github.com/OARANHA/cerebro.git"
Documentation = "https://github.com/OARANHA/cerebro#readme"

[project.scripts]
cerebro = "src.cli.main:main"
cerebro-setup = "cerebro.cerebro_setup:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "cerebro*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
