[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ocerebro"
version = "0.4.11"
description = "OCerebro - Sistema de Memoria para Agentes (Claude Code/MCP)"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "OARANHA", email = "aranha.com@gmail.com"}
]
keywords = [
    "claude",
    "claude-code",
    "memory",
    "ai",
    "agent",
    "mcp",
    "sqlite",
    "sqlite-vec",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "sqlite-vec>=0.1.0",
    "mcp>=1.0.0",
    "anthropic>=0.40.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
]

[project.optional-dependencies]
semantic = [
    "sentence-transformers>=2.2.0",
    "spacy>=3.5.0",
]
full = [
    "ocerebro[semantic]",
]
test = [
    "ocerebro[semantic]",
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
dev = [
    "ocerebro[test]",
    "black>=23.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/OARANHA/ocerebro"
Repository = "https://github.com/OARANHA/ocerebro.git"
Documentation = "https://github.com/OARANHA/ocerebro#readme"

[project.scripts]
ocerebro = "src.cli.main:main"
ocerebro-setup = "cerebro.cerebro_setup:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "cerebro*"]

[tool.setuptools.package-data]
"src.dashboard" = ["static/*", "static/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
